<resources>
    <string name="app_name">To Do? Or Not To Do?</string>
    <string name="dialog_delete_message">Deleted tasks could not be restored!</string>
    <string name="dialog_delete_title">Delete task?</string>
    <string name="complete">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add_task">Add a task</string>
    <string name="add_item">Add Item</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="edit_task">Edit Task:</string>
    <string name="action_settings">Settings</string>
    <string name="action_like_dislike">Like/Dislike</string>
    <string name="send_mail">Send</string>
    <string name="mail_from_user">Hey Yoav,\n\nI really liked/disliked your app because (your text)\n\nYours truly,\nYOUR NAME</string>
    <string name="set_english">English</string>
    <string name="set_spanish">Spanish</string>
    <string name="set_hebrew">Hebrew</string>
    <string name="long_click">* Long click on a task will remove task from list</string>
    <string name="task_empty">Task is empty!</string>
    <string name="uncheck_task">Uncheck \'Complete\' checkbox to edit task</string>
    <string name="delete_completed">Delete Completed</string>
    <string name="required">Required</string>
    <string name="save">Save</string>
    <string name="priority">Priority</string>
    <string name="priority_low">Low</string>
    <string name="priority_med">Medium</string>
    <string name="priority_hi">High</string>
    <string name="priority_super">Super</string>

    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Super</item>
    </string-array>

</resources>
