<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="15"
        android:gravity="top|start"
        android:maxLines="15"
        android:scrollbars="vertical"
        android:text="@string/mail_from_user"
        android:id="@+id/et_edit_mail" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/bt_cancel_send_mail"/>
        <Button
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/send_mail"
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/bt_send_mail" />
    </LinearLayout>

</LinearLayout>
