<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">
    <LinearLayout
        android:id="@+id/infoLinearLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="0dp"
            android:maxWidth="10pt"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingEnd="6dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="monospace"
            android:layout_weight="3"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c0c0c0"/>
        <TextView
            android:id="@+id/tvListView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textStyle="bold|italic"
            android:textAppearance="?android:textAppearanceMedium"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="monospace"
            android:layout_weight="7"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDayDue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingBottom="5dp"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="12sp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="monospace"/>
            <TextView
                android:id="@+id/tvTimeDue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/time"
                android:textStyle="bold"
                android:textSize="12sp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="monospace"/>

            <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete"
            android:clickable="true"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="notifyChange"
            android:id="@+id/cbComplete"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/listItemVerticalBarrier"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        android:background="#c0c0c0"/>
    <LinearLayout
        android:id="@+id/LinearLayoutListItemBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        android:orientation="horizontal">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabEdit"
            android:src="@drawable/ic_mode_edit_white_36dp"
            app:fabSize="normal"
            app:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:tint="@android:color/white"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabDelete"
            android:src="@drawable/ic_delete_white_36dp"
            app:fabSize="normal"
            app:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:tint="@android:color/white"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabExport"
            android:src="@drawable/ic_date_range_white_36dp"
            app:fabSize="normal"
            app:elevation="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:tint="@android:color/white"/>
    </LinearLayout>

</LinearLayout>